# dfw-jumpstart

./: .gitignore  CHANGELOG.md  CMakeLists.txt  FIX  README.md  TODO.txt  _makefile_app  configure.sh  editor.sh  main.cpp  makefile_common  makefile_linux  makefile_win  tiles.sh
class/: CMakeLists.txt  input.h
class/app/: CMakeLists.txt  app_defs.h  audio_defs.h  audio_dispatcher.cpp  audio_dispatcher.h  audio_tools.cpp  audio_tools.h  aurable.h  display_defs.h  draw_struct.cpp  draw_struct.h  drawable.cpp  drawable.h  game_defs.h  game_input.h  localization.cpp  localization.h  menu_representation.h  motion.cpp  motion.h  object_audio_player.cpp  object_audio_player.h  object_decoration.cpp  object_decoration.h  object_decoration_factory.cpp  object_decoration_factory.h  object_logic_factory.cpp  object_logic_factory.h  object_trigger.cpp  object_trigger.h  player.cpp  player.h  room.cpp  room.h  room_action.h  room_action_factory.cpp  room_action_factory.h  room_connection.cpp  room_connection.h  room_entrance.cpp  (+11 more)
class/controllers/: CMakeLists.txt  _template.cpp  _template.h  console.cpp  console.h  fps_test.cpp  fps_test.h  menu.cpp  menu.h  signals.h  states.h  step.cpp  step.h  test.cpp  test.h  test_2d.cpp  test_2d.h  test_2d_text.cpp  test_2d_text.h  test_poly.cpp  test_poly.h
class/dfwimpl/: CMakeLists.txt  app_config.h  kernel_config.cpp  state_driver.cpp  state_driver.h
data/app_data/: arcade_data.dnot
data/config/: config.dnot  debug_config.dnot
data/resources/: audio.txt  fonts.txt  music.txt  surfaces.txt  textures.txt
include/app/: app_defs.h  audio_dispatcher.h  aurable.h  display_defs.h  draw_struct.h  drawable.h  env.h  game_input.h  menu_representation.h  object_audio_player.h  object_decoration.h  object_decoration_factory.h  object_logic_factory.h  object_trigger.h  player.h  room.h  room_action_factory.h  room_entrance.h  room_object_box.h  room_wall.h  shared_resources.h  spatiable.h  tile_decoration.h
include/controller/: console.h  fps_test.h  menu.h  signals.h  states.h  step.h  test_2d.h  test_2d_text.h  test_poly.h
include/dfwimpl/: config.h  state_driver.h
include/input/: input.h
lib/: CMakeLists.txt
lib/app/: audio_dispatcher.cpp  draw_struct.cpp  drawable.cpp  object_decoration.cpp  object_decoration_factory.cpp  object_logic_factory.cpp  object_trigger.cpp  room.cpp  room_action_factory.cpp  room_entrance.cpp  room_wall.cpp  shared_resources.cpp  spatiable.cpp  tile_decoration.cpp
lib/controller/: console.cpp  menu.cpp  step.cpp  test_2d.cpp  test_2d_text.cpp  test_poly.cpp
lib/dfwimpl/: CMakeLists.txt  config.cpp  state_driver.cpp
make/: app  app_dependencies  controllers  core  linux.template  makefile_core  makefile_dfw  setup_fresh
resources/: editor.sh  tiles.sh
resources/data/app_data/: arcade_data.json  decoration-data.json  layouts.json  menus.json
resources/data/app_data/maps/: map01.actions.json  map01.json  map02.actions.json  map02.json  map03.actions.json  map03.json  map04.actions.json  map04.json  map05.actions.json  map05.json
resources/data/config/: config.dnot  config.json  debug_config.dnot  debug_config.json
resources/data/resources/: audio.txt  fonts.txt  textures.txt
resources/logs/: README.md
scripts/: create_controller.sh  make_templates.sh  setup_fresh.sh
scripts/scripts/: create_controller.sh
scripts/templates/: CHANGELOG.md  CMakeLists.txt  GETTING_STARTED.txt  main.cpp  make_appimage.sh
scripts/templates/include/app/: env.h  input.h  service_provider.h
scripts/templates/include/controller/: states.h
scripts/templates/include/dfwimpl/: config.h  state_driver.h
scripts/templates/linuxdeploy/: app.desktop  net.caballorenoir.app.appdata.xml
scripts/templates/resources/data/config/: config.json
scripts/templates/resources/lists/: fonts.txt  sounds.txt
scripts/templates/scripts/: create_controller.sh  new_class.sh
scripts/templates/scripts/templates/: _class_template.cpp  _class_template.h  _cmake_source_template  _controller_template.cpp  _controller_template.h
scripts/templates/src/: main.cpp
scripts/templates/src/app/: CMakeLists.txt  service_provider.cpp
scripts/templates/src/dfwimpl/: config.cpp  state_driver.cpp
src/: main.cpp
src/app/: audio_tools.cpp  motion.cpp  object_audio_player.cpp  object_decoration.cpp  object_logic_factory.cpp  player.cpp  room.cpp  room_action_factory.cpp  shared_resources.cpp  tile_decoration.cpp
src/controller/: console.cpp  fps_test.cpp  menu.cpp  test_2d.cpp  test_2d_text.cpp  test_poly.cpp
src/dfwimpl/: config.cpp  state_driver.cpp
templates/: GETTING_STARTED.txt  _template.cpp  _template.h  app  app_config.cpp  app_config.h  config.dnot  controllers  example.cpp  example.h  kernel_config.cpp  makefile_app  makefile_controllers  state_driver.cpp  state_driver.h  states.h
